objects/TASKRAY__trFlexFilterSetShareJunction__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trFlexFilterSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flex Filter Set</label>
        <referenceTo>TASKRAY__trFlexFilterSet__c</referenceTo>
        <relationshipLabel>Flex Filter Share</relationshipLabel>
        <relationshipName>Flex_Filter_Share</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trGroupId__c</fullName>
        <label>TaskRay Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStandardFlexFilterSet__c</fullName>
        <label>Standard Flex Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskRay User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Flex Filter Share</relationshipLabel>
        <relationshipName>Flex_Filter_Share</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Flex Filter Share</label>
    <nameField>
        <label>Flex Filter Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flex Filter Share</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>